# dspy_workspace

./: .cursorignore  .gitignore  .pre-commit-config.yaml  README.md  generate_llms.py  llms-ctx-full.txt  llms-ctx.txt  llms.txt  llms_autofix.py  llms_fixed.txt  mlflow.db  pyproject.toml  repo_helpers.py
DSPY_Dev_Assistant/: .gitignore  README.md  main.py  push.sh  requirements.txt
DSPY_Dev_Assistant/assistant/: README.md  modules.py  signatures.py
DSPY_Dev_Assistant/data/: README.md  trainset.py
DSPY_Dev_Assistant/templates/: README.md  index.html
artifacts/AcidicSoil/prompts/: prompts-llms-ctx-full.txt  prompts-llms-ctx.txt  prompts-llms.txt
artifacts/NexaAI/nexa-sdk/: nexa-sdk-llms-ctx-full.txt  nexa-sdk-llms-ctx.txt  nexa-sdk-llms.txt
artifacts/e2b-dev/e2b/: e2b-llms-ctx-full.txt  e2b-llms-ctx.txt  e2b-llms.txt
artifacts/mastra-ai/mastra/: mastra-llms-ctx-full.txt  mastra-llms-ctx.txt  mastra-llms.txt
codeGeneration_for_unfamilar_libraries/: README.md  generate_examples.py
interactive_learning/codeGeneration_for_unfamilar_libraries/: README.md  interactive_learning.py  main.py
interactive_learning/ollama-llm_config/: README.md  litellm_learning.json  main.py  repo_helpers.py  vllm_learning.json
interactive_learning/vllm-llm_config/: README.md  litellm_learning.json
llmtxt_generator/: README.md  generate_llms.py  multiple-repo_llmstxt.py  web_interface.py
llmtxt_generator/templates/: README.md  index.html
ollama-llm_config/: learn_library.py
scripts/: README.md  activate_env.sh  start_mlflow.sh  update-ollama-models.ps1
tests/: test_interactive_generate_llms.py
tutorials/: README.md
tutorials/agents/: README.md  main.py  mlflow.db  requirements.txt  start_mlflow.sh  train.py
tutorials/agents/agent/: README.md  react_agent.py
tutorials/agents/config/: README.md  models.py
tutorials/agents/data/: README.md  hover_loader.py
tutorials/agents/evaluation/: README.md  metrics.py
tutorials/agents/tools/: README.md  wikipedia.py
tutorials/conversation_history/: README.md  main.py
tutorials/multi-llmtxt_generator/: README.md  generate_llms.py  interactive_generate_llms.py  interactive_generate_llms_py_dynamic_names_owner_repo_dirs.py  repo_helpers.py  repository_analyzer.py  signatures.py
vllm-llm_config/: main.py
